finish desktop display website design

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -52,9 +49,9 @@
           trail
         </h2>
       </div>
-      <div class="wrap-inner">
+      <div id="feature" class="wrap-inner">
         <div class="main-item">
-          <img class="notification" src="images/notification.png" alt="" />
+          <img src="images/notification.png" alt="" />
           <div class="content">
             <h4>Advocate</h4>
             <p>
@@ -65,7 +62,7 @@
           </div>
         </div >
         <div class="main-item">
-          <img class="hand" src="images/hand.png" alt="" />
+          <img src="images/hand.png" alt="" />
           <div class="content">
             <h4>Volunteer</h4>
             <p>
@@ -76,7 +73,7 @@
           </div>
         </div>
         <div class="main-item">
-          <img class="mountain" src="images/mountan.png" alt="" />
+          <img src="images/mountan.png" alt="" />
           <div class="content">
             <h4>Explore</h4>
             <p>
@@ -89,7 +86,7 @@
         <a href="#" class="btn">Learn More</a>
       </div>
 
-      <div class="wrap-inner">
+      <div id="our-success" class="wrap-inner">
         <h2>
           With the support of our members, and partners, we've improved trail
           access for millions of people
@@ -110,7 +107,7 @@
 
     <div id="news">
       <h2 class="wrap-inner">Protecting Trails: Current News and Issues</h2>
-      <div>
+      <div id="news-list" class="wrap-inner">
         <div>
           <a href="#">
             <img src="images/post1.jpg" alt="" />
@@ -126,7 +123,7 @@
             world—during International Trails Day. Muncak invites hikers,
             cyclists,…
           </p>
-          <a href="#">Read More</a>
+          <a href="#" class="news-readmore">Read More</a>
         </div>
         <div>
           <a href="#">
@@ -143,7 +140,7 @@
             go on a bike overnight trip during International Trails Dayyou will
             simultaneously…
           </p>
-          <a href="#">Read More</a>
+          <a href="#" class="news-readmore">Read More</a>
         </div>
         <div>
           <a href="#">
@@ -158,15 +155,15 @@
             early and I am wearing layers, but it won’t be long until they are
             peeled away to adapt to the summer…
           </p>
-          <a href="#">Read More</a>
+          <a href="#" class="news-readmore">Read More</a>
         </div>
       </div>
     </div>
 
     <div id="contact-footer-wrap">
 
-      <div class="wrap-outer">
-        <p>Receive the latest updates on how to protect trails. Subscribe to the
+      <div id="contact" class="wrap-outer">
+        <p class="wrap-inner">Receive the latest updates on how to protect trails. Subscribe to the
           monthly edition of Paperless Trails.</p>
           <form action="">
             <input type="text" name="name" placeholder="Name"/>
@@ -228,7 +225,7 @@
           </div>
         </div>
 
-        <ul>
+        <ul id="socials">
           <li> 
             <a href="#">
               <img src="images/instagram.png" alt="" />
