fix header title

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ul>
       </div>
       <div id="jumbostron" class="wrap-inner">
-        <h1>山の頂上に登りましょう</h1>
+        <h1>山の頂上に<br>登りましょう</h1>
         <h2>
           自分に合っているかどうかを判断し、より面白く、楽しく、安全にするために必要なハイキング情報は次のとおりです。
         </h2>
